<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background"
    tools:ignore="PrivateResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_weather"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_marginStart="15dp"
            android:background="@color/design_default_color_on_primary"
            android:text="@string/weather"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_time"
            app:layout_constraintTop_toTopOf="@id/tv_time" />

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="127dp"
            android:layout_height="101dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="@id/tv_time"
            app:layout_constraintTop_toBottomOf="@id/tv_weather"
            app:layout_constraintBottom_toBottomOf="@id/tv_sunset"
            app:srcCompat="@drawable/de"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/location"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="131dp"
            android:layout_height="76dp"
            android:layout_marginBottom="196dp"
            android:text="@string/temp"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="50sp"
            app:layout_constraintTop_toTopOf="@id/img_icon"
            app:layout_constraintStart_toEndOf="@id/img_icon"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_windspeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/windSpeed"
            android:textColor="@color/design_default_color_on_secondary"
            app:layout_constraintTop_toBottomOf="@id/tv_sunset"
            app:layout_constraintStart_toStartOf="@id/tv_sunset"/>


        <TextView
            android:id="@+id/tv_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/clound"
            android:textColor="@color/design_default_color_on_secondary"
            app:layout_constraintStart_toStartOf="@id/tv_windspeed"
            app:layout_constraintTop_toBottomOf="@id/tv_windspeed"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/time"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintStart_toStartOf="@id/tv_location"
            app:layout_constraintTop_toBottomOf="@id/tv_location" />

        <TextView
            android:id="@+id/tv_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sunrise"
            android:textColor="@color/design_default_color_on_secondary"
            app:layout_constraintStart_toStartOf="@id/tv_temp"
            app:layout_constraintTop_toBottomOf="@id/tv_temp"/>

        <TextView
            android:id="@+id/tv_sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/sunSet"
            android:textColor="@color/design_default_color_on_secondary"
            app:layout_constraintTop_toBottomOf="@id/tv_sunrise"
            app:layout_constraintStart_toStartOf="@id/tv_sunrise"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_conn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/load"
        app:layout_constraintStart_toStartOf="@id/contentConstraintLayout"
        app:layout_constraintEnd_toEndOf="@id/contentConstraintLayout"
        app:layout_constraintTop_toBottomOf="@id/contentConstraintLayout"/>

    <View
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_conn"/>

</androidx.constraintlayout.widget.ConstraintLayout>